build/testing/noncore-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1

    nginx.ingress.kubernetes.io/proxy-body-size: "1m"
    nginx.ingress.kubernetes.io/limit-rpm: "300"
  name: noncore-api-ingress
  namespace: testing
  labels:
    app: noncore-api
spec:
  rules:
    - host: staging-api.rfcx.org
      http:
        paths:
          - path: /(v[12]/.*)
            pathType: Prefix
            backend:
              service:
                name: noncore-api-service
                port: 
                  number: 80
